# pieces

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/pieces/extensions/: pydantic.py
tests/: test_nvr.py
tests/extensions/: test_pydantic.py
